# polyvoice

./: LICENSE  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  helsinki_models.py  jobs.py  logging_config.py  main.py  model_downloads.py  model_paths.py  models.py  queue_manager.py
backend/app/pipeline/: asr.py  audio_mix.py  dub.py  ingest.py  punctuation.py  qc.py  segment.py  subtitle_render.py  subtitles.py  translate.py  tts.py  voice_ref.py
backend/scripts/: load_voicedesign.py
backend/tests/: test_subtitles.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AdvancedSettingsPanel.tsx  BatchQueueForm.tsx  CollapsibleSection.tsx  JobForm.tsx  ModelsModal.tsx  Player.tsx  ProjectSidebar.tsx  QueueView.tsx  SubtitleOverlay.tsx  SubtitleSettingsPanel.tsx
frontend/src/components/ui/: Accordion.tsx  Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  FileDropZone.tsx  FormSection.tsx  Icons.tsx  Input.tsx  ModeCard.tsx  MultiFileDropZone.tsx  SegmentedControl.tsx  Select.tsx  SlidePanel.tsx  ToggleSwitch.tsx  WorkflowStepper.tsx
frontend/src/hooks/: useJobForm.tsx  useSubtitleFontSettings.ts  useSubtitleStyleSettings.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  tr.json
frontend/src/utils/: jobConfig.ts  modelGroups.ts
