[project]
name = "dual-subtitle-pipeline"
version = "0.1.0"
description = "Transcribe, translate, and dual-subtitle videos with word-level highlighting"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "websockets>=14.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "yt-dlp[default]>=2026.6.9",
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=4.57.6",
    "sentencepiece==0.2.0",
    "sacremoses==0.1.1",
    "qwen-asr>=0.0.6",
    "librosa>=0.11.0",
    "numpy>=1.26.0",
    "soundfile==0.13.0",
    "httpx==0.28.1",
    "huggingface-hub>=0.26.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[tool.uv]
constraint-dependencies = [
    "numba>=0.59",
    "llvmlite>=0.42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
